# scan2sim

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements-cu130.txt  requirements.txt
configs/: axis_steps.yaml
configs/cmcf/: decoder_rules_12head.yaml  marker_field_virtual.yaml
configs/feature/: label_rules.json  pointnet2_multitask.yaml
configs/parser/: label_decoder_rules.yaml  part_parser_rules.yaml  part_parser_rules_RMmotion.yaml  part_parser_rules_v1.yaml  part_parser_rules_virtual.yaml
dataset/: 324_LowerBody_10set.jsonl  L_HipKnee.jsonl  R_HipKnee.jsonl  label_rules.json  poses_324.jsonl  real_IMU_GT.jsonl
docs/: PROJECT_STRUCTURE.md
docs/integration/: CMCF.md  SCRIPTS.md  SETUP.txt
integrations/livehps/: README.md
scripts/: __init__.py  __main__.py  cli.py
scripts/cmcf/: __init__.py  map_prototypes.py  run_cmcf_pipeline.py
scripts/common/: __init__.py  angle_utils.py  coord_utils.py  io_paths.py  json_utils.py  livehps_defaults.py  normalize.py  path_utils.py  pc_io.py
scripts/conversion/: __init__.py  fit_bind_local_quat.py  npz_to_fbx.py  npz_to_obj.py  npz_to_quat.py  obj_to_fbx.py  pcd_to_ply.py  quat_to_unity.py
scripts/data/: angle2jointvector.py  build_feature_manifest.py  rename_virtual.py
scripts/eval/: match_one.py
scripts/feature/: __init__.py  heads.py  losses.py  manifest_dataset.py  pointnet2_multitask.py
scripts/infer/: __init__.py  infer_feature_classifier.py  infer_point.py
scripts/labeling/: __init__.py  classify_label.py  compare_step_labels.py  export_step_jsonl.py
(+29 files in other folders)
